completed register, login, validation, completed wall.html

--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -1,10 +1,35 @@
 * {
-    outline:red 1px dotted;
+    margin:0px;
+    border:0px;
+    padding:0px;
+    box-sizing: border-box;
+    vertical-align: top;
     font-size: x-large;
+    outline:red 1px dotted;
 }
-input {
+input, textarea {
     border:2px black solid;
 }
 input[type="submit"] {
     box-shadow: 5px 5px 5px black;
+}
+.navbar {
+    /* display:flex; */
+    /* align-items:center; */
+    padding: 1% 2%;
+}
+.navbar h2 {
+    margin-left:auto;
+    margin-right:75px;
+}
+.navbar a {
+    font-size:42px;
+    margin-top: -8px;
+}
+li {
+    color:red;
+}
+.trash {
+    width:2.5vw;
+    /* height: 3vw; */
 }
